Fix bad bootstrap default color contrast of sub headers

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -30,6 +30,10 @@ h4{
 	color: #666;
 }
 
+.h1 .small, .h1 small, .h2 .small, .h2 small, .h3 .small, .h3 small, .h4 .small, .h4 small, .h5 .small, .h5 small, .h6 .small, .h6 small, h1 .small, h1 small, h2 .small, h2 small, h3 .small, h3 small, h4 .small, h4 small, h5 .small, h5 small, h6 .small, h6 small {
+  color: #6C787F;
+}
+
 p a {
 	text-decoration: underline;
 }
